# shop-agent

./: .env  .gitignore  README.md  auto_pod_runner.py  chains.py  main.py  pod_workflow.py  pyproject.toml  schemas.py  trend_agent.py
.github/: copilot-instructions.md
outputs/designs/: placeholder_1757124387.txt  placeholder_1757194861.txt  placeholder_1757195301.txt  placeholder_1757370676.txt
